--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -2,3 +2,16 @@
 
 +font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
 +font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
+
+@font-face
+  font-family: 'Bebas Neue'
+  src: url('../fonts/BebasNeueBold.woff2') format("woff2"), url('../fonts/BebasNeueBold.woff') format("woff")
+  font-weight: bold
+  font-style: normal
+
+
+@font-face
+  font-family: 'Helvetica LT Std'
+  src: url('../fonts/HelveticaLTStd-Roman.woff2') format("woff2"), url('../fonts/HelveticaLTStd-Roman.woff') format("woff")
+  font-weight: 500
+  font-style: normal
