--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,5 +1,9 @@
 $default-font: "roboto-example", sans-serif
 $accent: orange
+$dark: #321e15
+$dark-brown: #540404
+$black: #000000
+$gray: #f7f6f6
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
