Edit varibles.sass full width container

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -23,7 +23,8 @@ body
 			border-color: red
 		&:required:valid
 			border-color: green
-
+// .container
+//   max-width: 1170px
 .img-responsive
 	display: block
 	max-width: 100%
@@ -36,3 +37,10 @@ body
 
 b, strong
 	font-weight: bold
+
+.title-font
+  font-family: 'Bebas Neue'
+  text-transform: uppercase
+
+.base-title
+  @extend .title-font      
