--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -12,3 +12,22 @@ $grid-breakpoints: (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
 $container-max-widths: (sm: 540px, md: 720px, lg: 960px, xl: 1170px)
 
 $gutter: $grid-gutter-width
+
+@mixin placeholder()
+  input::-webkit-input-placeholder
+    @content
+  input:-moz-placeholder
+    @content
+  input::-moz-placeholder
+    @content
+  input:-ms-input-placeholder
+    @content
+    
+.type-style
+  font-size: 16px
+  font-family: sans-serif
+  letter-spacing: 1px
+    
+@include placeholder()
+  color: #fff
+  @extend .type-style
