--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -4,7 +4,128 @@
 @import "base"
 
 
+//------------ Header ---------------
 
+header
+	min-height: 87px
+	background-color: $dark
+
+.flex-grid
+	min-height: 87px
+	display: flex
+	align-items: center
+	justify-content: space-between
+
+.phones
+	margin-left: auto
+	a
+		display: block
+		font-size: 18px
+		text-decoration: none
+		color: #fff
+		&:hover
+			text-decoration: underline
+
+.logo
+	display: block
+	margin-right: 5%
+
+.company-description
+	color: #fff
+	max-width: 240px
+	line-height: 22px
+
+.hero
+	min-height: 600px
+	background-image: url(../img/hero.jpg)
+	background-size: cover
+	background-position: bottom center
+	&__composition
+		width: 100%
+		height: 100%
+		min-height: 600px
+		display: flex
+		align-items: center
+
+.composition__content
+	width: 100%
+	color: #fff
+
+.main-title
+	color: #fff
+	font-size: 72px
+	line-height: 80px
+	margin-bottom: 3%
+
+.hero__text
+	font-size: 36px
+	margin-bottom: 2%	
+
+.advantages__row
+	padding: 50px 0 180px 0
+	background-image: url(../img/advantages.png)
+	background-repeat: no-repeat
+	background-position: 100% 0
+
+.advantages__list
+	padding-left: 50px
+	counter-reset: Item
+	li	
+		color: $black
+		font-size: 16px
+		font-weight: 700
+		margin-bottom: 50px
+		position: relative
+		&:nth-child(2)
+			&:before
+				content: "2"
+		&:nth-child(3)
+			&:before
+				content: "3"
+		&:nth-child(4)
+			&:before
+				content: "4"					
+		&:before
+			content: "1"
+			width: 45px
+			height: 45px
+			background-color: $dark
+			position: absolute
+			left: -55px
+			top: 50%
+			transform: translateY(-50%)
+			border-radius: 50%
+			color: #fff
+			text-align: center
+			line-height: 45px
+			font-size: 36px
+			font-weight: 400
+			font-family: 'Bebas Neue'
+
+.order
+	background-image: url(../img/order-bg.png)
+	padding: 100px 0
+	background-size: cover
+
+
+.order__text
+	font-size: 48px
+	color: #fff
+	text-transform: uppercase
+	font-family: 'Bebas Neue'
+	line-height: 58px
+	max-width: 380px
+	margin-bottom: 30px
+
+.order__img
+	position: relative
+	img
+		display: block
+		position: absolute
+		top: -100px	
+
+.catalog
+	padding-top: 130px
 
 
 @import "media" // Always at the end
