desktop is ready

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -51,6 +51,9 @@ ul
   font-family: 'Bebas Neue'
   text-transform: uppercase
 
+.hidden
+	display: none
+
 section
 	padding: 20px 0
 
@@ -102,7 +105,11 @@ section
 		&.phone
 			background-image: url(../img/icon-phone.png)
 			background-repeat: no-repeat
-			background-position: 8% 50%	
+			background-position: 8% 50%
+		&.email
+			background-image: url(../img/email.png)
+			background-repeat: no-repeat
+			background-position: 8% 50%		
 
 .button
 	color: #ffffff
@@ -143,9 +150,14 @@ section
 
 .mb-20
 	margin-bottom: 20px
+.mb-30
+	margin-bottom: 30px	
 .mb-15
 	margin-bottom: 15px
 
+
+.mfp-bg
+	background-color: #000
 
 //Gallery animation 
 .mfp-ready .mfp-figure
