--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -183,7 +183,105 @@ header
 	font-weight: 400
 	margin-left: 6px		
 
+.photos
+	background-image: url(../img/photos-bg.png)
+	background-repeat: no-repeat
+	background-position: 50% 50%
+	.base-title
+		margin-bottom: 30px
+		padding-top: 60px
+		position: relative
+		z-index: 10
 
+.contact
+	background-image: url(../img/contact-bg.jpg)
+	background-size: cover
+	background-position: bottom center
+	color: #fff
+	padding-bottom: 100px
+	.base-title
+		position: relative
+		z-index: 1
+		color: #fff
+		padding: 50px 0
+
+.contact__item
+	line-height: 24px
+	a
+		color: #fff
+	form
+		input
+			margin-bottom: 16px	
+
+.contact__item__title
+	font-size: 27px
+	line-height: 40px
+	color: #fff
+	font-weight: bold
+	letter-spacing: 1px
+	margin-bottom: 25px
+
+.contact__item-last
+	padding-left: 45px
+	padding-right: 0
+
+.contact__list
+	margin-bottom: 20px
+
+
+.social
+	li
+		display: inline-block
+		width: 43px
+		height: 43px
+		margin-right: 5px
+		&:nth-child(1)
+			a
+				background-image: url(../img/fa.png)
+				background-size: contain
+				background-position: center
+		&:nth-child(2)
+			a
+				background-image: url(../img/inst.png)
+				background-size: contain
+				background-position: center		
+		a
+			display: block
+			width: 100%
+			height: 100%
+
+footer
+	background-color: $dark
+	padding: 50px 0
+	.social
+		margin-left: auto
+		margin-right: 10%
+	.phones
+		margin-left: 0
+
+
+#form
+	background-color: $dark
+	padding: 50px 20px
+	border-radius: 10px
+	display: block
+	margin: 0 auto
+	width: 100%
+	max-width: 360px
+	text-align: center
+	position: relative
+	background-image: url(../img/contact-bg.jpg)
+	.base-title
+		position: relative
+		z-index: 1
+		padding-top: 0
+	input
+		margin-right: 0
+		margin-bottom: 20px
+
+.mfp-close-btn-in .mfp-close
+	color: #fff
+	font-size: 30px		
 
 
 @import "media" // Always at the end
