--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -260,6 +260,23 @@ footer
 		margin-left: 0
 
 
+.send-mesages
+	display: none
+	width: 100%
+	max-width: 400px
+	position: fixed
+	left: 50%
+	top: 50%
+	transform: translate(-50%,-50%)
+	z-index: 100
+	background-image: url(../img/contact-bg.jpg)
+	color: #fff
+	padding: 50px 20px
+	border-radius: 10px
+	background-position: center
+	text-align: center
+	box-shadow: 0 0 50px 30px rgba(0,0,0,0.4)
+
 #form
 	background-color: $dark
 	padding: 50px 20px
