--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -138,7 +138,11 @@ section
 .button--white
 	background-color: #fff
 	color: $black
-	font-size: 24px	
+	font-size: 24px
+	&:hover
+		color: #fff
+	&:focus,&:active
+		color: $black	
 
 .p-0
 	padding: 0
