--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -72,7 +72,92 @@
 	  background-color: #321e15
 	  -webkit-border-radius: 50%
 	  border-radius: 50%
-	  z-index: -1									
+	  z-index: -1
+	.order
+		background-color: $dark-brown
+		background-image: none
+		padding: 55px 0
+		margin-top: 40px  
+	.order__content
+		text-align: center
+	.order__text
+		font-size: 25px
+		line-height: 30px
+	.catalog
+		padding-top: 30px
+	.product__gallery
+		.mb-20
+			margin-bottom: 10px
+	.product__info
+		padding-top: 0
+	.product__table
+		margin-bottom: 0
+		.info__item
+			&:nth-child(2)
+				display: none
+	.info__item
+		font-size: 10px
+		line-height: 11px
+		letter-spacing: 0
+	.product__price
+		font-size: 22px
+	.product__descr
+		.button
+			font-size: 14px
+			line-height: 16px
+			padding: 7px 0
+	.product__grid>.row
+		background-position: 58% 21%
+		background-size: 20%
+		background-image: none
+	.product__gallery
+		background-color: #fff
+	.product__grid>.row:nth-child(2n)
+		background-image: none
+		.col-md-12.p-0.mb-20
+			padding-right: 15px
+		.col-md-12.p-0
+			padding-right: 15px
+	.product__grid>.row
+		margin-bottom: 20px
+	.photos
+		padding-top: 0
+		background-image: none
+		.row.mb-20
+			.col-6:nth-child(1)
+				padding-right: 10px
+			.col-6:nth-child(2)
+				padding-left: 10px	
+		.product__gallery .mb-20
+			margin-bottom: 15px 
+		.base-title
+			padding-top: 0
+			padding-bottom: 0
+	.photos__grid
+		.product__gallery
+	    flex-direction: column-reverse
+	.contact
+		background-image: url(../img/contact-bg-mobile.jpg)
+		padding-bottom: 30px
+	.contact .base-title
+		padding: 25px 0	
+	.contact__item
+		text-align: center
+		margin-bottom: 30px
+	.contact__item.contact__item-last
+		padding-left: 30px
+		text-align: left	
+	.contact__item__title
+		font-size: 23px
+		margin-bottom: 5px
+	footer
+		padding: 35px 0
+		.flex-grid
+			flex-wrap: wrap
+		.logo
+			margin: auto
+			margin-bottom: 20px				    
+															 									
 
 
 /*==========  Mobile First  ==========*/
