--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -164,6 +164,9 @@ header
 		margin: 1px
 		margin-bottom: 2px	
 
+.mobile__size
+	display: none
+
 .info__item
 	display: flex
 	letter-spacing: -1px
