--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -66,6 +66,7 @@ section
 	span
 		display: inline-block
 		position: relative
+		z-index: 2
 		&:before
 			position: absolute
 			left: -49px
@@ -75,10 +76,12 @@ section
 			height: 80px
 			background-color: $dark
 			border-radius: 50%
-			z-index: -1
+			z-index: 1
 	i
 		font-style: normal
 		color: #fff
+		position: relative
+		z-index: 3
 
 .base-form
 	input
