--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -164,7 +164,7 @@ header
 		margin: 1px
 		margin-bottom: 2px	
 
-.mobile__size
+.info__item.mobile__size
 	display: none
 
 .info__item
@@ -190,6 +190,13 @@ header
 	background-image: url(../img/photos-bg.png)
 	background-repeat: no-repeat
 	background-position: 50% 50%
+	.mb-20
+		margin-bottom: 27px
+	img
+		max-height: 136px	
+	.photo--big
+		img
+			max-height: 299px
 	.base-title
 		margin-bottom: 30px
 		padding-top: 60px
