--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -304,9 +304,17 @@
 		padding: 35px 0
 		.flex-grid
 			flex-wrap: wrap
+			justify-content: center
+			.flex-grid-item
+				flex-direction: row-reverse
 		.logo
 			margin: auto
-			margin-bottom: 20px				    
+			margin-bottom: 20px
+			width: 100%
+			text-align: center
+		.social
+			margin-left: 6%
+			margin-right: -3%					    
 															 									
 
 
