--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -14,7 +14,13 @@ header
 	min-height: 87px
 	display: flex
 	align-items: center
-	justify-content: space-between 
+	justify-content: space-between
+
+.flex-grid-item
+	width: 100%
+	display: flex
+	justify-content: center
+
 
 .phones
 	margin-left: auto
